syntax = "proto3";
package noding;
option go_package = "./;noding";

service Noding {
    rpc Heart(Hearting) returns (HeartingResponse) {}
    rpc Wake(WakeUp) returns (WakeUpResponse) {}
}

message Hearting {
    string ip = 1;
}

message HeartingResponse {
    bool success = 1;
}

message WakeUp {
    repeated string files = 1;
    int32 number = 2;
}

message WakeUpResponse {
    bool success = 1;
}
